# samwise-adcs-flight

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  ONBOARDING.md  README.md  build.sh  pre-commit  pre-commit-hook.sh  test_sim_interface.jl
.claude/agents/: gnc-satellite-engineer.md  senior-software-architect.md  space-embedded-systems-engineer.md
.github/workflows/: c_lint.yaml
boards/: adcs.h
documentation/: mkdocs.yml
documentation/diagrams/: .$samwise-adcs-flight-system.drawio.bkp
documentation/docs/: ONBOARDING.md  architecture.md  docs_usage.md  index.md  mkdocs-usage.md  sensors.md
documentation/docs/control/: desaturation.md  magnetorquer_allocation.md  reaction_wheel_allocation.md
documentation/docs/core/: constants.md  init.md  macros.md  pins.md  slate.md  telemetry_packet.md
documentation/docs/drivers/: gps.md  imu.md  magnetometer.md  magnetorquers.md  mram.md  neopixel.md  picubed.md  power_monitor.md  sun_sensors.md
documentation/docs/estimation/: sun_vector_estimation.md
documentation/docs/gnc/: attitude_dynamics.md  bdot.md  sun_vector.md
documentation/docs/math/: linalg.md  matrix_utils.md  utils.md
documentation/docs/models/: b_field.md  sun_sensor_to_vector.md
documentation/docs/navigation/: attitude_filter.md  frame_transforms.md
documentation/docs/onboarding/: getting-started.md  git-best-practices.md
documentation/docs/software/: main.md  scheduler.md
documentation/docs/states/: cool_down_state.md  detumble.md  detumble_state.md  init_state.md  safe.md  slewing_state.md  test.md
documentation/docs/tasks/: actuators.md  actuators_task.md  bdot.md  bdot_task.md  sensors.md  sensors_task.md  telemetry.md  telemetry_task.md  test.md  watchdog.md  watchdog_task.md
documentation/docs/tests/: testing.md
documentation/docs/utils/: coordinate_transforms.md  time_transforms.md
documentation/docs/world/: magnetic_field.md  sun_model.md
examples/: sim_example.py  test_packet_structure.py
math/: af_jacobian.nb  ekf-parameters.nb  inertia.nb  lqr.nb  mrps.nb
scripts/: log_viewer.py  magnetic_plotter.py  plot_serial.py  pre-commit-hook.sh  satellite_state.py  serial_copy.py  serial_csv.py  serial_data_20250607_134911.csv  serial_dump.py  simInterface.jl  sun_vector_validation_20250704_142751.csv  sun_vectors_2025.csv
scripts/calibration/: imu_calibration.py  magnetometer_calibration.py
scripts/calibrations/magnetometer/: calibration.py
scripts/igrf/: igrf_comparison.py  magnetic_data.csv
scripts/igrf/output/: igrf_comparison_results.csv
scripts/magnetometer/: calibration.py  mag_cal_data.json
scripts/magnetometer/output/: mag_calibration_20250810_213022.h
scripts/sun_vector/: sun_vector_test.py  sun_vectors_2025.csv
scripts/testing/software/: plot_ekf_convergence.py  sun_sensor_occlusion_handling.md
scripts/testing/visualization/: plot_magnetic_field.py  plot_quaternion_orientation.py
scripts/tests/sun_sensor_to_vector/: sun_sensor_to_vector.py
scripts/tools/: plot_serial.py
scripts/utils/: plot_orientation.py  plot_serial.py  serial_copy.py
src/: adcs_command_packet.h  adcs_packet.h  constants.h  error.cpp  init.cpp  linalg.h  macros.h  main.cpp  motor_slate.h  packets.h  params.h  pins.h  slate.h
src/apps/: adcs_main.cpp  motor_main.cpp
src/apps/adcs_app/: adcs_main.cpp  init.cpp  init.h
src/apps/hitl_a/: init.cpp  init.h  main.cpp  pins.h  slate.h
src/apps/hitl_b/: init.cpp  init.h  main.cpp  pins.h  slate.h
src/apps/motor_app/: controller.h  init.cpp  init.h  irq.cpp  irq.h  motor_main.cpp  motor_slate.h  pins.h  timer_util.cpp  timer_util.h
src/drivers/: adm1176.cpp  adm1176.h  ads7830.c  ads7830.cpp  ads7830.h  gps.cpp  gps.h  imu.cpp  imu.h  magdrv_pwm.cpp  magnetometer.cpp  magnetometer.h  magnetorquer.cpp  magnetorquer.h  magtorq_monitor.cpp  magtorq_monitor.h  mram.cpp  mram.h  neopixel.cpp  neopixel.h  photodiodes_yz.cpp  photodiodes_yz.h  picubed_uart.cpp  picubed_uart.h  pwm_driver.c  pwm_driver.h  sun_pyramids.cpp  sun_sensors_yz.cpp  sun_sensors_yz.h  watchdog.cpp  watchdog.h
src/drivers/adm1176/: adm1176.cpp  adm1176.h
src/drivers/gps/: gps.cpp  gps.h
src/drivers/imu/: imu.cpp  imu.h
src/drivers/magnetometer/: magnetometer.cpp  magnetometer.h
src/drivers/magnetorquers/: magnetorquers.cpp  magnetorquers.h
src/drivers/motor/: motor.cpp  motor.h
src/drivers/motor_board/: motor_board.cpp  motor_board.h
src/drivers/mram/: mram.cpp  mram.h
src/drivers/neopixel/: neopixel.cpp
src/drivers/picubed/: picubed.cpp  picubed.h
src/drivers/power_monitor/: power_monitor.cpp  power_monitor.h
src/drivers/sim_interface/: sim_interface.cpp  sim_interface.h
src/drivers/software_uart/: software_uart.cpp  software_uart.h
src/gnc/: attitude_dynamics.cpp  attitude_dynamics.h  attitude_filter.cpp  attitude_filter.h  bdot.cpp  bdot.h  desaturation.cpp  desaturation.h  frame_transforms.cpp  matrix_utils.cpp  matrix_utils.h  mjd.cpp  reaction_wheel_allocation.cpp  reaction_wheel_allocation.h  sun_pyramid_reading.cpp  sun_sensor_to_vector.cpp  sun_sensor_to_vector.h  sun_vector.cpp  sun_vector.h  traid_solver.h  triad_solver.cpp  utils.cpp  utils.h
src/scheduler/: scheduler.cpp  scheduler.h  state_machine_types.h
src/states/: README.md  cool_down_state.cpp  cool_down_state.h  detumble_state.cpp  detumble_state.h  emergency_state.cpp  emergency_state.h  init_state.cpp  init_state.h  safe_state.cpp  safe_state.h  slewing_state.cpp  slewing_state.h  test_state.cpp  test_state.h
src/tasks/: actuators_task.cpp  actuators_task.h  bdot_task.cpp  print_task.cpp  print_task.h  sensors_task.cpp  sensors_task.h  telemetry_task.cpp  test_task.cpp  test_task.h  watchdog_task.cpp  watchdog_task.h
src/tests/: adm1176_test.cpp  b_field_tests.cpp  b_field_tests.h  blink.cpp  blink.h  ekf_test.cpp  ekf_test.h  i2c_scanner.cpp  i2c_scanner.h  magnetorquer_tests.cpp  mram_test.cpp  mram_test.h  sun_sensor_tests.cpp  sun_sensor_tests.h  sun_vector_tests.cpp
src/tools/: attitude_propagator.cpp  attitude_propagator.h  i2c_scanner.cpp  orbit_prop.cpp  orbit_prop.h
(+106 files in other folders)
